# ChangeLog for app-crypt/etcd-ca
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/etcd-ca/ChangeLog,v 1.3 2015/06/05 12:03:55 jlec Exp $

  05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

*etcd-ca-0_p20150423 (01 May 2015)

  01 May 2015; Zac Medico <zmedico@gentoo.org> +etcd-ca-0_p20150423.ebuild:
  0_p20150423 version bump

*etcd-ca-0_p20140903 (16 Oct 2014)

  16 Oct 2014; Zac Medico <zmedico@gentoo.org> +etcd-ca-0_p20140903.ebuild,
  +metadata.xml:
  Add app-crypt/etcd-ca.