@@ -1,28 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST etcd-ca-0_p20140903.zip 1178338 SHA256 5da9f7afad6dd373d96c5d36dd30e9f43cfc8fc2359bbf2d0c6a864fff139f81 SHA512 f421be2c835e7ed701f698d8a48cf25fe011ba3a831ff8fa3a80f5f074f6b70fed7f71d64c488cce5e12af8b8ae29685a1b19f8f2cd487954019d483d90f5e1c WHIRLPOOL 8f1db212877eb522818a96b45e21946e27fac716acfe924ea45c0b8f20b253905eccfeffa1fdf47c582f6cc8866da812462cd71e2ddc6c5abc969f71737cf749
 DIST etcd-ca-0_p20150423.tar.gz 55031 SHA256 53e5083db3bee32a991a118be0386bfeadafc3173a707941c3a12284a7f97abc SHA512 8c7ecb80e056da77997283ff2defb6df9a9acef250b0fac8e18c2bca71cccfedf6d782b7c9bf6491574d88ac5fa358f9bc5f540aa718a2470655d75f2f54fff4 WHIRLPOOL 3f7b5a77787f6ed6474fb01bfcf02d394616d609d8cb815086b730499eb7293c9125c09abfa4a10a2c6ca375176a82d75fb3fe304fc1f9f53385f9b552ebff12
 EBUILD etcd-ca-0_p20140903.ebuild 1049 SHA256 1b2fca28655f486b6b9c801050e3782b94540659b819acdea5a7da3ef2b9163b SHA512 5e15257f3f1e40cd61aa070f4c554753b8eca1ec6c77706d46a2e99ff92a66c5e9c6b0701bcbbc7fbe6f69a1e314c386a1fcb5517a31fe0ae39ff5c60235b178 WHIRLPOOL 9ef778ab11209a7fb8f643ea1832fba4a31e538f677465394093522c6bb78efb27f79e52a801bebf57576eeb5b8922b356e422265aceea2f4486c20ea76e6fa3
+EBUILD etcd-ca-0_p20150423-r1.ebuild 1061 SHA256 4c3c408dbd624089326825a3d79309808899132b9ada2d63fd72a8817b2ae73b SHA512 ee0d9adb83c346f4d410a66237b6d90cff486ed95524b9331eefeabdc1d7fb6b79b799a23328f0b4b27c1aa09f72bc1932e955403c603b50376a975e0de4e4e4 WHIRLPOOL 6990ef18a7eea26636dfd5de4ea2103888ea785bf3516ee9d6ed9fe08b6f7a33162522874f82314c57e31b2a4103ee6a345b5facd6331478b37db27b15d85747
 EBUILD etcd-ca-0_p20150423.ebuild 1055 SHA256 2ad44d2b58547a8175fb9330ab6ab132ae33f7624fc1642ea88234f0901b1d76 SHA512 c5a4f40133525d31ef15f979db662e9b192fe8645069af72bda7a8db52d22ea39ec49399119a586d3a4370eb730d68a5009346c8683659a8c2faeb80665876e0 WHIRLPOOL 79c32f780d0ac79bee3711d30243dc2e33073593f8eec40ea74d26858130f55859d036e952384d938615494bdf96223705beef5e795ce1ad52f4cf280f2416f7
-MISC ChangeLog 603 SHA256 72c6de9141a23cdfedf3b90857018b16892f4eb00e2a569b8a0c2f8d37571955 SHA512 ba6a326553e94f5d35a38ca6a1759ddd3e355f5166f261ad25973d3008fe62f8c67e613d6205361c53b2292fea11d17e386dcc3581e55ccb01f8fe2cf54b7777 WHIRLPOOL ecd10d88805ba6902be73a71807318b2439b68c5041e0a7b001b14d6bbb933ac026873a8abe9539a46cdb3c818cd8c6fd7ecf2f1b2d6f11b071e2fc684df0a7c
+MISC ChangeLog 781 SHA256 3873be82bb3d9f316912516d49fa93774ce564e4e440fef63f29c76fbc67d2e6 SHA512 0ec5543867f5ce4ef3758c6ea200989038305b81df54f6d0f1434281c8b22204dc8bdf5288745bcd351ca443ce1f02e3ee9a2968739b5d8bc94c6e65ebedd78d WHIRLPOOL c32e24e6499a903ac50b4ef57da125cca65d15ff92d325936269eb5a91634d5b86e372e0d23a7b0d39c4d71780fe81ab99e72cf3a7ab5087ff563cdd6ba06b83
 MISC metadata.xml 502 SHA256 cd3de8931f8438110af37186d5cd8023a3ba11377f413839f9ed505510ec654c SHA512 362a5b2482ce5622412ebfaaa89fba788ff3314df2575ac7568e4a05c7d4a3548a5178ade57b1ffcc73c081a25da6c1a18ca6a7df342a61604fcdcc18ed2781d WHIRLPOOL a238c1c993d776f99f0946dca3472df96250ca1ad1bba3cdc98587e147e801199954118167bda9546bf7b5bbfca1cac39215c960ebe1c8816e297418f7a64312
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVcZAtXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmir8oP/0MV+5KdhFSIgnlOGX1v8SK+
-HUgDgOMPx+bVh+O/FWyqXVegGHdll1aLI0pjqB7VEudpaZXT8kER9Fsv0FG/PWf8
-jfqSUJY7y6QQHegfQln9yCnHvDMXAiuBwChhy4RA+fh3seyLmM2PXVbB5PDC6sUa
-v80CH1U04JOzWRZGYwiy82ArXpKJk3Xnvpuxe++lK0RM97Hx8QYcPHqL8+i0H12Z
-IJ79MnWm/NJP9VbB+Wwv4/Fu53qbECE6ODy/WPBUUg3CvmYCAqVIdENrFn8Vm0KI
-LNmemdxCkFNNBd9bq/lHDwkIvz6oaDa+5Q6HJFu5iAr0xg9BzU1IbmeF1m5BCMqZ
-QjGkEpJpOlaCf3IOV3JFg0Eggvkthy6U8IMjaMLp11oj7dmmJyhxPRL4H2l4IgfO
-aRhm3aGgHujA5czf8HlF2eHpqwJF2sXh95lPQuJ9z+BW/t3Zl54xSqX9QLr1MJnT
-R1ufr0aaqk1kTx8xCg1rzsOJOIZT3w84q1esPpTEF9ndjmjVg4ofTgIVRg6irdeI
-5anlCAiw4Vw4pe0pfdf9fny2mCvqBLHv/g2QtWsofPErDBYe2AWCmet1amn+jrtI
-bv1ml/q18xY8hmTTxluKHoaQszFWWVA4260FbSGifYskGB7PMGESCNpvtsK3SH1t
-GUgyl/CmGOp4jq9mSgEi
-=lEZD
+iEYEAREIAAYFAlWcdzUACgkQblQW9DDEZTirswCfR0RRI6Ff9xL3XjOO+xBP7PxL
+vSEAn2rjzNPWqNUAc50z4FKtlNALliXI
+=yxZk
 -----END PGP SIGNATURE-----
