@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/etcd-ca
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/etcd-ca/ChangeLog,v 1.3 2015/06/05 12:03:55 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/etcd-ca/ChangeLog,v 1.4 2015/07/08 01:04:45 williamh Exp $
+
+*etcd-ca-0_p20150423-r1 (08 Jul 2015)
+
+  08 Jul 2015; William Hubbs <williamh@gentoo.org>
+  +etcd-ca-0_p20150423-r1.ebuild:
+  rev bump to add slot dependency on dev-lang/go
 
   05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Add github to remote-id in metadata.xml
